# sodo-dd

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: backend-ci.yml  frontend-ci.yml  security.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260514_0001_initial.py
backend/app/: config.py  database.py  logging.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  certificates.py  due_diligence.py  router.py  webhooks.py
backend/app/core/: exceptions.py  rate_limit.py  security.py
backend/app/models/: __init__.py  api_key.py  audit_log.py  base.py  certificate.py  organization.py  report.py  user.py  webhook.py
backend/app/schemas/: auth.py  certificate.py  common.py  due_diligence.py
backend/app/scripts/: seed.py
backend/app/services/: due_diligence.py  report_generator.py  scoring.py  storage.py
backend/app/services/adapters/: __init__.py  base.py  land_portal.py  transaction_history.py  zoning.py
backend/app/services/ocr/: __init__.py  base.py  parser.py  tesseract.py
backend/app/utils/: vietnamese.py
backend/app/workers/: celery_app.py  tasks.py  webhooks.py
backend/tests/: conftest.py  test_adapters.py  test_api_health.py  test_parser.py  test_scoring.py  test_security.py
docs/: API.md  ARCHITECTURE.md  COMPLIANCE.md  ROADMAP.md  SECURITY.md
frontend/: Dockerfile  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/lib/: api.ts
infra/grafana/: dashboard.json
infra/nginx/: _proxy.conf  nginx.conf
infra/prometheus/: prometheus.yml
