[project]
name = "sodo-dd"
version = "0.1.0"
description = "Sổ Đỏ Due Diligence API"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "alembic>=1.13",
  "redis>=5.0",
  "celery>=5.4",
  "boto3>=1.34",
  "python-multipart>=0.0.9",
  "passlib[bcrypt]>=1.7.4",
  "pyjwt>=2.8",
  "cryptography>=42.0",
  "httpx>=0.27",
  "tenacity>=8.2",
  "structlog>=24.1",
  "prometheus-client>=0.20",
  "sentry-sdk[fastapi]>=2.3",
  "pillow>=10.3",
  "pytesseract>=0.3.10",
  "opencv-python-headless>=4.9",
  "pypdf>=4.2",
  "reportlab>=4.2",
  "ulid-py>=1.1",
  "python-slugify>=8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "types-requests",
  "httpx>=0.27",
  "freezegun>=1.5",
  "respx>=0.21",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "C4", "RUF"]
ignore = ["S101", "B008"]
[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "N802"]
"alembic/**" = ["N"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --cov=app --cov-report=term-missing"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
